Refactor how RenameMobService uses entity props